# web-scraper

./: .gitignore  Dockerfile  LICENSE  README.Docker.md  README.md  pyproject.toml  requirements.txt  scraper.py  test_unittest.py  website_data.json
.circleci/: aws_deploy.yml  build_and_test.yml  config.yml  deploy_to_s3.yml
circleci/: config.yml
src/: __init__.py  __main__.py  gui.py  main.py  scraped_data.json  scraper.py  web_scraper.py
tests/: test_unittest.py  unittests_test.py
tests/integration/: __init__.py  test_scraper.py
tests/unit/: test_methods.py  test_scraper.py
